-Attempt fix for extra space on right bug

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -21,7 +21,7 @@ p {
   width: 0;
   height: 100vh;
   background-color: rgba(211, 211, 211, 0.965);
-  transform: translate(50vw);
+  /* transform: translate(50vw); */
   transition-duration: 550ms;
 }
 .popout-hide a {
